<?xml version="1.0"?>
<package format="2">
  <name>dnn_detect</name>
  <version>0.1.0</version>
  <description>DNN based detection</description>

  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <author email="jimv@mrjim.com">Jim Vaughan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>

</package>
